2005-11-21  Ian Lance Taylor  <ian@airs.com>

	* proti.c (fiprocess_data): After receiving a packet successfully,
	set afInaked and azIrecbuffers for that packet to FALSE.  When
	saving a packet, always replace the old data.

2003-05-29  Ian Lance Taylor  <ian@airs.com>

	* Released version 1.07.

	* Makefile.am (dist-hook): New target.
	* Makefile.in: Rebuild.

2003-05-28  Ian Lance Taylor  <ian@airs.com>

	* uucico.c (uhelp): Make capitalization consistent.

	* proty.c: Add prototype declaration for fyxchg_syncs.

2002-03-07  Ian Lance Taylor  <ian@airs.com>

	* configure.in: Substitute NEWCONFIGDIR and OLDCONFIGDIR rather
	than defining them.
	* uuconf/Makefile.am (AM_CFLAGS): Define NEWCONFIGLIB and
	OLDCONFIGLIB.
	* configure, config.h.in, Makefile.in, */Makefile.in: Rebuild.

2002-03-06  Ian Lance Taylor  <ian@airs.com>

	* uucp.texi (Compilation): Use @option in table of configure
	options.
	(Configuration Files): The newconfigdir variable is now set using
	a configure option.

	* configure.in: Don't assume that ac_cv_func_getline will be
	defined, since we no longer always test for the presence of
	getline.
	* configure, config.h.in: Rebuild.

2002-03-05  Ian Lance Taylor  <ian@airs.com>

	* Released beta version 1.07.

	* configure.in: Don't define SBINDIR.
	* unix/Makefile.am (AM_CFLAGS): Define SBINDIR.
	* configure, config.h.in, unix/Makefile.in: Rebuild.

	* Makefile.am (EXTRA_DIST): Define.
	* Makefile.in: Rebuild.

	* Makefile.am (UUHEADERS): Add sysdep.h.
	* unix/Makefile.am (libunix_a_SOURCES): Add fsusg.h.
	* uuconf/Makefile.am (libuuconf_a_SOURCES): Add alloc.h, syshdr.h,
	and uucnfi.h.
	* Makefile.in, unix/Makefile.in, uuconf/Makefile.in: Rebuild.

	* uucico.c (fcall): If a port was specified on the command line,
	and the current alternate does not use that port, but a later
	alternate does, then skip to the later alternate.

	* uucp.texi: Use new Texinfo commands @command, @option, @email,
	and @url.
